--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -20,5 +20,5 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
-  sendgrid_username: 
-  sendgrid_password: 
+  sendgrid_username: <%= ENV["SENDGRID_USERNAME"] %>
+  sendgrid_password: <%= ENV["SENDGRID_PASSWORD"] %>
